Softbody cashe still not updated correctly in Blender 2.8 #62768

Closed
opened 2019-03-20 11:41:47 +01:00 by Erik · 3 comments

System Information
Operating system: Windows 10
Graphics card: GTX 980Ti

Blender Version
Broken: 2.80, 47ba487e05
Worked: 2.79

Short description of error
I would like to revive report #60451. There was a solution comitted for this, but in a built from today, the issue is still present.

Exact steps for others to reproduce the error
Move around the bone while the animation is running. In the second loop, at least some amount of the movement is still visible.

untitled.blend

**System Information** Operating system: Windows 10 Graphics card: GTX 980Ti **Blender Version** Broken: 2.80, 47ba487e05da Worked: 2.79 **Short description of error** I would like to revive report #60451. There was a solution comitted for this, but in a built from today, the issue is still present. **Exact steps for others to reproduce the error** Move around the bone while the animation is running. In the second loop, at least some amount of the movement is still visible. [untitled.blend](https://archive.blender.org/developer/F6854351/untitled.blend)
Author

Added subscriber: @ElrikLeBaum

Added subscriber: @ElrikLeBaum
Sergey Sharybin was assigned by Sebastian Parborg 2019-03-20 12:46:30 +01:00

This issue was referenced by 2b21e7ab9a

This issue was referenced by 2b21e7ab9a14cfa1d9e42b97d8056c3b0050fcc9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62768
No description provided.