source/blender/depsgraph/intern/builder/deg_builder_nodes.cc
@@ -778,6 +778,11 @@ void DepsgraphNodeBuilder::build_object_transform(Object *object)
 	                   function_bind(BKE_object_eval_uber_transform,
 	                                 _1,
 	                                 ob_cow));
+	/* Operation to take of rigid body simulation. soft bodies and other firends
+	 * in the context of point cache invalidation. */
+	add_operation_node(&object->id,
+	                   NodeType::TRANSFORM,
+	                   OperationCode::TRANSFORM_SIMULATION_INIT);
 	/* Object transform is done. */
 	op_node = add_operation_node(&object->id, NodeType::TRANSFORM,
 	                             OperationCode::TRANSFORM_FINAL,
@@ -1072,9 +1077,6 @@ void DepsgraphNodeBuilder::build_rigidbody(Scene *scene)
 			if (object->type != OB_MESH) {
 				continue;
 			}
-			add_operation_node(&object->id,
-			                   NodeType::TRANSFORM,
-			                   OperationCode::TRANSFORM_SIMULATION_INIT);
 			/* Create operation for flushing results. */
 			/* Object's transform component - where the rigidbody operation
 			 * lives. */
